Switch to deploy via DEB file